<resources>
    <string name="app_name">Cleaning</string>
    <string name="login">登  录</string>
    <string name="login_tips">请选择登录用户</string>
    <string name="error_logininfo">请填写正确信息</string>
    <string name="robot_login_error">密码错误</string>
    <string name="confirm_before_task_start">任务开始前请确认</string>
    <string name="no_longer_prompt_today">今日不再提示</string>
    <string name="task_start">任务开始</string>
    <string name="pls_leave_away_from_robot">机器人旋转请远离</string>
    <string name="device_name">设备名称：</string>
    <string name="reconnect">重新连接</string>
    <string name="pls_reset_emergency_btn">如需恢复使用，请重置急停按钮</string>
    <string name="unchecked_malfunction">未查看故障</string>
    <string name="history_malfunction">历史故障</string>
    <string name="malfunction_level">故障等级</string>
    <string name="malfunction_code">故障代码</string>
    <string name="malfunction_time">故障时间</string>
    <string name="malfunction_desc">故障描述</string>
    <string name="check">查看</string>
    <string name="no_unchecked_malfunction">目前无未查看故障</string>
    <string name="no_history_malfunction">目前无历史故障</string>
    <string name="select_mode">请设置使用场景</string>
    <string name="common_model">普通场景</string>
    <string name="common_tips">在普通地面上使用</string>
    <string name="stone_model">石材场景</string>
    <string name="stone_tips">在天然石材地面上使用</string>
    <string name="clean_water">净水量</string>
    <string name="dirty_water">污水量</string>
    <string name="push_water">排水</string>
    <string name="loop">循环</string>
    <string name="tims">次数</string>
    <string name="start">开 始</string>
    <string name="filling_point">充电点</string>
    <string name="pull_water_point">补水点</string>
    <string name="push_water_point">排水点</string>
    <string name="change_map">切换地图</string>
    <string name="work_map">地图视图</string>
    <string name="work_info">工作视图</string>
    <string name="has_done">已完成</string>
    <string name="low">轻度</string>
    <string name="common">标准</string>
    <string name="high">强力</string>
    <string name="planned_area">规划面积</string>
    <string name="done_area">完成清洁面积</string>
    <string name="work_time">工作时长</string>
    <string name="remaining_time">剩余时长</string>
    <string name="loop_tims">当前循环次数</string>
    <string name="stop">停止</string>
    <string name="continues">继续</string>
    <string name="suspend">暂停</string>
    <string name="app_locking">本机待机中</string>
    <string name="click_lock">双击屏幕登录进行操作</string>
    <string name="user_name">用户名：</string>
    <string name="password">密    码：</string>
    <string name="mobile">手    机：</string>
    <string name="email">邮    箱：</string>
    <string name="four_digits_psw">4位数密码</string>
    <string name="user_list">用户名单</string>
    <string name="delete_user">删除</string>
    <string name="choose_user">选择</string>
    <string name="history_report">历史报告</string>
    <string name="user">用        户：</string>
    <string name="clean_task">清扫范围：</string>
    <string name="clean_mode">清扫模式：</string>
    <string name="task_start_time">开始时间：</string>
    <string name="task_end_time">结束时间：</string>
    <string name="task_status">任务状态：</string>
    <string name="working_time">工作时长</string>
    <string name="water_consumption">用水量</string>
    <string name="complete_cleaning_area">完成清扫面积</string>
    <string name="planning_area">规划面积</string>
    <string name="completion_ratio">完成比例</string>
    <string name="change_cleaning_intensity">更改清洁力度</string>
    <string name="brush">刷盘推杆</string>
    <string name="water_spray_motor">喷水泵</string>
    <string name="clean_water_tank_valve">清水箱阀门</string>
    <string name="squeegee">吸水扒推杆</string>
    <string name="brush_motor">刷盘电机</string>
    <string name="sewage_tank_valve">污水箱阀门</string>
    <string name="burdick_lamp_valve">紫外线灯管</string>
    <string name="serial_number">机器人SN号：</string>
    <string name="delect">删除</string>
    <string name="select">选择</string>
    <string name="changemanual">切换手动</string>
    <string name="changeauto">切换自动</string>
    <string name="changemodel">切换场景</string>
    <string name="instruction">使用说明</string>
    <string name="hisreport">历史报告</string>
    <string name="malfunction">故障信息</string>
    <string name="deviceinfo">设备信息</string>
    <string name="mapmanager">地图管理</string>
    <string name="dust_molel">除尘模式</string>
    <string name="clean_model">洗地模式</string>
    <string name="onekey_model">一键清洁</string>
    <string name="stone_clean">石材洗护</string>
    <string name="light">轻度</string>
    <string name="standard">标准</string>
    <string name="hight">深度</string>
    <string name="sel_map">请选择地图</string>
    <string name="save">保存</string>
    <string name="add_success">添加成功</string>
    <string name="save_success">保存成功</string>
    <string name="del_success">删除成功</string>
    <string name="do_error">操作失败</string>
    <string name="duplicate_name">用户名不能重名</string>
    <string name="loading">加载中...</string>
    <string name="connect_error">连接失败</string>
    <string name="map_manager">地图管理</string>
    <string name="edit_map">地图编辑</string>
    <string name="robot_yl">当前机器音量：%s</string>
    <string name="robot_name">机器人名称：%s</string>
     <string name="i_sure_delete">确定删除此%s?</string>
    <string name="robot_id">机器人ID：%s</string>
    <string name="i_dinaliangd">"当前电量低于%s\n正在返回充电点"</string>
    <string name="i_dinaliangd_jy">"当前电量低于%s\n建议暂停当前工作，返回充电点"</string>
    <string name="robot_device">机型：%s</string>
    <string name="login_user">当前登录用户：%s</string>
    <string name="login_time">最近登录时间：%s</string>
    <string name="logout">退出登录</string>
    <string name="laser">激光雷达</string>
    <string name="gyroscope">陀螺仪</string>
    <string name="camera">摄像头</string>
    <string name="ultrasonic">超声波</string>
    <string name="brush_pull">刷盘推杆</string>
    <string name="suction_pull">吸水扒推杆</string>
    <string name="brush_disc">刷盘电机</string>
    <string name="suction_motor">吸风电机</string>
    <string name="traveling_motor">行走电机</string>
    <string name="water_pump">清水泵</string>
    <string name="clean_liquid_level">清水液位计</string>
    <string name="dirty_liquid_level">污水液位计</string>
    <string name="robot_status">设备状态</string>
    <string name="software_version">软件版本</string>
    <string name="app_version">应用程序版本：%s</string>
    <string name="navigation_version">导航系统版本：%s</string>
    <string name="firmware_version">固件版本：%s</string>
    <string name="check_version">检查更新</string>
    <string name="no_name">当前无用户</string>
    <string name="sure_logout">确定退出当前用户?</string>
    <string name="sure_delete_user">确定删除此用户?</string>
    <string name="error_info">机器人存在故障，不建议开始任务请先排查故障</string>
    <string name="error_sure">故障解除</string>
    <string name="sure_az">请确认吸水扒已正确安装</string>
    <string name="sure_ct">请确认尘推拖布已正确安装</string>
    <string name="sure_delete_task">确定删除此报告?</string>
    <string name="sure_delete">确定删除</string>
    <string name="jxtd">请继续推动\n将地面残留污水吸干</string>
    <string name="stop_xs">停止吸水</string>
    <string name="sure_goon_task">是否继续上次未完成任务?</string>
    <string name="sure_goon">确定执行</string>
    <string name="sure_delete_content">确定删除%s</string>
    <string name="sure_location_exact">机器人定位是否准确?</string>
    <string name="text_correct">正确</string>
    <string name="text_mistake">错误</string>
    <string name="rotate_loc">旋转定位</string>
    <string name="is_sure_push_water">排水前请将排水管放下\n确定开始排水？</string>
    <string name="sure_push_water">确定排水</string>
    <string name="ing_push_water">正在排水\n排水完成请将排水管装至原位</string>
    <string name="waring">开始任务，请确认当前定位点是否正确</string>
    <string name="sureclose">确定关闭当前任务页面</string>
    <string name="done_push_water">排水完成</string>
    <string name="sure">确定</string>
    <string name="is_sure_go_charge_point">确定返回充电点？</string>
    <string name="is_sure_go_pull_point">确定返回补水点？</string>
    <string name="is_sure_go_push_point">确定返回排水点？</string>
    <string name="sure_go">确定返回</string>
    <string name="ing_sure_go_charge_point">正在返回充电点</string>
    <string name="ing_sure_go_pull_point">正在返回补水点</string>
    <string name="ing_sure_go_push_point">正在返回排水点</string>
    <string name="str_biaozhunmoshi">标准模式</string>
    <string name="str_gxms">干吸模式</string>
    <string name="str_jsms">节水模式</string>
    <string name="str_sdms">深度模式</string>
    <string name="str_dhxdms">导航消毒模式</string>
    <string name="str_bzxdms">标准消毒模式</string>
    <string name="str_gxxdms">干吸消毒模式</string>
    <string name="str_jsxdms">节水消毒模式</string>
    <string name="str_sdxdms">深度消毒模式</string>
    <string name="str_qsrsnnr">请输入SN内容</string>
    <string name="str_pszyzxfdjdkssy">喷水只有在吸风电机打开时使用</string>
    <string name="str_xfgbspsyldgb">吸风关闭时喷水也联动关闭</string>
    <string name="str_cddbcz">充电点不存在</string>
    <string name="str_bsdbcz">补水点不存在</string>
    <string name="str_psdbcz">排水点不存在</string>
    <string name="str_dwdbcz">定位点不存在</string>
    <string name="cdd">充电点</string>
    <string name="bsd">补水点</string>
    <string name="psd">排水点</string>
    <string name="dwd">定位点</string>
    <string name="str_fdm">机器处于非待命状态,无法执行该操作</string>
    <string name="str_qxzrw">请选择任务</string>
    <string name="str_qinagli">强力</string>
    <string name="str_jqrzzgzqwdr">机器人正在工作，请勿打扰</string>
    <string name="str_rwzd_dlbz">任务中断 : 电量不足</string>
    <string name="str_rwzd_qsd">任务中断: 清水低</string>
    <string name="str_rwzd_wsg">任务中断: 污水高</string>
    <string name="str_jt">任务中断: 急停</string>
    <string name="str_rwzd_xdyywdgz">任务中断: 消毒液液位低故障</string>
    <string name="str_rwzd_xdbzsgz">任务中断: 消毒泵堵塞故障</string>
    <string name="str_haschance">已取消</string>
    <string name="i_autoback">自动返回</string>
    <string name="add_roomlist">新增地图</string>
    <string name="obstacle">禁行区</string>
    <string name="eraser">橡皮擦</string>
    <string name="measure">测量</string>
    <string name="nonetry">虚拟墙</string>
    <string name="add_point">点位</string>
    <string name="legend_robot">机器人位置</string>
    <string name="legend_laser">激光点</string>
    <string name="legend_obstacle">障碍物</string>
    <string name="legend_unknown_area">未知区域</string>
    <string name="legend_visible_area">可见区域</string>
    <string name="map_point">地图点位</string>
    <string name="pls_addpoint">请先保存地图位点</string>
    <string name="pls_eraser">请先保存地图</string>
    <string name="pls_noentry">请先保存虚拟墙</string>
    <string name="pls_obstacle">请先保存禁行区</string>
    <string name="saving">保存中</string>
    <string name="save_error">保存失败</string>
    <string name="revoke">撤销</string>
    <string name="redo">重做</string>
    <string name="nonetry_name">虚拟墙%s</string>
    <string name="obstacle_name">禁行区%s</string>
    <string name="close">闭合</string>
    <string name="close_error">无法闭合</string>
    <string name="hint_input">请输入文字</string>
    <string name="ok">确定</string>
    <string name="cancle">取消</string>
    <string name="tips">点击右下方按钮开始扫图</string>
    <string name="slam_tips">请输入地图名称</string>
    <string name="frg_xl_xili_zuigao8dang_">吸力（最高8档）</string>
    <string name="frg_xl_dang">档</string>
    <string name="frg_xl_dangqianshurushuzhiwuxiao">当前输入数值无效</string>
    <string name="dialog_function_dituguanli">地图管理</string>
    <string name="dialog_function_renwuguanli">任务管理</string>
    <string name="layout_user_list_queding">确定</string>
    <string name="item_pop_change_level_genggaiqingjielidu">更改清洁力度</string>
    <string name="item_pop_change_level_qingdu">轻度</string>
    <string name="item_pop_change_level_biaozhun">标准</string>
    <string name="item_pop_change_level_qiangli">强力</string>
    <string name="activity_engineering_mode_bujiankongzhi">部件控制</string>
    <string name="activity_engineering_mode_gongchengmianban">工程面板</string>
    <string name="activity_engineering_mode_quyurenwushezhi">区域任务设置</string>
    <string name="activity_engineering_mode_canshushezhi">参数设置</string>
    <string name="activity_engineering_mode_penshui">喷水</string>
    <string name="activity_engineering_mode_penwu">喷雾</string>
    <string name="activity_engineering_mode_xili">吸力</string>
    <string name="activity_engineering_mode_sudu">速度</string>
</resources>