<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="250dp"
    android:layout_height="match_parent"
    android:background="@drawable/ic_dialog_bg"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="370dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/switch_manual_iv"
            android:layout_width="200dp"
            android:layout_height="75dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/btn_dialog">

            <TextView
                android:id="@+id/tv_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/changemanual"
                android:textColor="#ffffff"
                android:textSize="25sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/switch_event_iv"
            android:layout_width="200dp"
            android:layout_height="75dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/changemodel"
                android:textColor="#ffffff"
                android:textSize="25sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mRelativeLayout_map_manage"
            android:layout_width="200dp"
            android:layout_height="75dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/dialog_function_dituguanli"
                android:textColor="#ffffff"
                android:textSize="25sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/mRelativeLayout_task_manage"
            android:layout_width="200dp"
            android:layout_height="75dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/dialog_function_renwuguanli"
                android:textColor="#ffffff"
                android:textSize="25sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="58dp"
            android:layout_marginTop="3dp"
            android:layout_marginRight="58dp"
            android:background="#33000000" />
    </LinearLayout>

    <TextView
        android:id="@+id/instructions_for_use_iv"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:layout_marginTop="31dp"
        android:drawableLeft="@drawable/ic_menu_one"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:text="@string/instruction"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/history_report_iv"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:drawableLeft="@drawable/ic_menu_two"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:text="@string/hisreport"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/malfunction_info_iv"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:drawableLeft="@drawable/ic_menu_three"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:text="@string/malfunction"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/device_info_iv"
        android:layout_width="200dp"
        android:layout_height="75dp"
        android:drawableLeft="@drawable/ic_menu_four"
        android:gravity="center"
        android:paddingLeft="20dp"
        android:text="@string/deviceinfo"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/version_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:textColor="#33ffffff"
        android:textSize="15sp" />
</LinearLayout>

