<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" android:id="@+id/mLinearLayout" android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical">
     <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="120dp" android:layout_marginTop="161dp" android:text="@string/frg_xl_xili_zuigao8dang_" android:textColor="#ffffff" android:textSize="28sp" android:textStyle="bold" />
     <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="120dp" android:layout_marginTop="46dp" android:gravity="center_vertical" android:orientation="horizontal">
          <TextView android:id="@+id/mTextView_1" android:layout_width="150dp" android:layout_height="70dp" android:background="#1B45A5" android:gravity="center" android:maxLength="1" android:singleLine="true" android:textColor="#fff" android:textSize="30sp" />
          <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="11dp" android:text="@string/frg_xl_dang" android:textColor="#66ffffff" android:textSize="30sp" />
     </LinearLayout>
     <LinearLayout android:id="@+id/mLinearLayout_warning" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="22dp" android:gravity="right|center_vertical" android:orientation="horizontal" android:paddingRight="104dp" android:visibility="gone">
          <ImageView android:layout_width="38dp" android:layout_height="38dp" android:background="@drawable/ic_waring" />
          <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dp" android:text="@string/frg_xl_dangqianshurushuzhiwuxiao" android:textColor="#66ffffff" android:textSize="28sp" />
     </LinearLayout>
</LinearLayout>

