<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="400dp"
        android:layout_height="280dp"
        android:layout_centerInParent="true"
        android:background="@drawable/shape_bg_dialog2">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="80dp"
            android:layout_marginRight="30dp"
            android:background="@null"
            android:hint="@string/hint_input"
            android:textColor="#f6f6f6"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_cancle"
                android:layout_width="0.0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/cancle"
                android:textColor="#ffffff"
                android:textSize="24sp" />

            <RelativeLayout
                android:layout_width="1dp"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:background="#ffffff" />

            <TextView
                android:id="@+id/tv_ok"
                android:layout_width="0.0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/ok"
                android:textColor="#ffffff"
                android:textSize="24sp" />
        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>

